syntax="proto3";

package dev_control;

service DevControlService {
    rpc GetI2C (RequestGetI2C) returns (ResponseGetI2C);
    rpc GetGPIO (MGPIO) returns (MGPIO);
    rpc SetGPIO (MGPIO) returns (MEmpty);
}
message RequestGetI2C {
    int32 bus_id = 1;
    int32 dev_address = 2;
    int32 register_address = 3;
    int32 read_length = 4;
}

message ResponseGetI2C {
    RequestGetI2C query = 1;
    bytes response = 2;
}

message MGPIO {
    int32 io_pin = 1;
    bool state = 2;
}

message MEmpty {}